[tool.poetry]
name = "introductiontocausalinference"
version = "0.1.0"
description = ""
authors = ["GristleGun <62438031+ozoozoi@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.4"
pandas = "^1.5.0"
black = "^22.10.0"
flake8 = "^5.0.4"
ipykernel = "^6.16.0"
scipy = "^1.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
